force-app/main/default/objects/ConfigurationList__c/ConfigurationList__c.object-meta.xml
<CustomObject>
    <label>配置清单</label>
    <nameField>
        <label>配置清单名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>配置清单</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>