force-app/main/default/objects/ConfigurationList__c/fields/ConfigCreateDate__c.field-meta.xml
<CustomField>
    <fullName>ConfigCreateDate__c</fullName>
    <label>配置清单创建日期</label>
    <type>Date</type>
</CustomField>