force-app/main/default/objects/ConfigurationList__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <label>项目编号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>